--- a/index.html
+++ b/index.html
@@ -23,15 +23,18 @@
 			integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU"
 			crossorigin="anonymous"
 		/>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 		<style></style>
 	</head>
 
 	<body>
 		<section class="section">
 			<div class="container">
-				<h1 class="title">Simpson API</h1>
-
-				<div class="content" id="chuck-norris"></div>
+				<h1 class="title d-flex justify-content-center fs-1"> Get your Simpson Quotes !!</h1>
+                    <div class= "d-flex justify-content-center mb-5">
+                        <button onclick="fetchSimpsonQuotesJSON()" class= "btn btn-dark">Your quote</button>
+                    </div>
+				<div class=" d-flex" id="simpson"></div>
 			</div>
 		</section>
 
@@ -41,6 +44,8 @@
 			integrity="sha256-S1J4GVHHDMiirir9qsXWc8ZWw74PHHafpsHp5PXtjTs="
 			crossorigin="anonymous"
 		></script>
-		<script></script>
+        <script src="script.js">
+            
+        </script>
 	</body>
 </html>
